# mathing

./: CMakeLists.txt  README.md
include/mathing/: matrix.h  quaternion.h  scalar.h  util.h  vector.h
include/mathing/impl/: matrix_impl.h
src/: matrix.cpp  quaternion.cpp  vector.cpp
test/: CMakeLists.txt  extern_gtest.cmake
test/src/: main.cpp
